# CROP-Graph-Proxy

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CROP Graph Proxy.cpp  CROP Graph Proxy.h  Dockerfile  entrypoint.sh  mingw-w64-i686.cmake  run.sh  screenshot-cron  supervisord.conf
.github/workflows/: docker-build.yml
novnc/: index.html
src/: CROP Graph Proxy.cpp  CROP Graph Proxy.h
src/zlib/: CMakeLists.txt
